--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div id="navbarMenu" class="navbar-menu">
                         <div class="navbar-end">
                             <span class="navbar-item">
-                                <a class="button is-white is-outlined" href="#">
+                                <a class="button is-white is-outlined" href="#home">
                                     <span class="icon">
                                         <i class="fa fa-home"></i>
                                     </span>
@@ -32,7 +32,7 @@
                                 </a>
                             </span>
                             <span class="navbar-item">
-                                <a class="button is-white is-outlined" href="#">
+                                <a class="button is-white is-outlined" href="#info">
                                     <span class="icon">
                                         <i class="fa fa-book"></i>
                                     </span>
@@ -40,7 +40,7 @@
                                 </a>
                             </span>
                             <span class="navbar-item">
-                                <a class="button is-white is-outlined" href="#">
+                                <a class="button is-white is-outlined" href="#sponsors">
                                     <span class="icon">
                                         <i class="fa fa-money-bill"></i>
                                     </span>
@@ -76,7 +76,7 @@
             <script  src="./scripts/particles.js"></script>
             
             <!--Landing body-->
-            <div class="hero-body">
+            <div class="hero-body" id="home">
                 <div class="container has-text-centered">
                     <img src="./img/CDC-logo.png" width="70%">
                     <h4>Powered by</h4>
@@ -100,7 +100,7 @@
             </div>
         </section>
 
-        <section class="hero is-medium is-warning is-bold">
+        <section class="hero is-medium is-warning is-bold" id="info">
             <div class="hero-body">
                 <div class="container">
                     <h1>When: 
