--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section class="hero is-info is-fullheight">
         <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-                <a class="navbar-item" href="https://bulma.io">
+                <a class="navbar-item" href="https://carolinadata.unc.edu/">
                     <h1>CADS</h1>
                 </a>
             </div>
@@ -63,7 +63,7 @@
                     </span>
                     <span class="navbar-item">
                         <a class="button is-warning is-white"
-                            href="https://github.com/dansup/bulma-templates/blob/master/templates/landing.html">
+                            href="https://carolinadatachallenge.typeform.com/to/vmVR4a">
                             <span class="icon">
                                 <i class="fa fa-address-book"></i>
                             </span>
@@ -92,12 +92,12 @@
                 <div class="columns has-text-centered">
                     <div class="column is-one-fifth"></div>
                     <div class="column">
-                        <a class="button is-warning is-focused is-fullwidth" href="/">
+                        <a class="button is-warning is-focused is-fullwidth" href="https://carolinadatachallenge.typeform.com/to/vmVR4a">
                             Register
                         </a>
                     </div>
                     <div class="column">
-                        <a class="button is-warning is-focused is-fullwidth" href="/">
+                        <a class="button is-warning is-focused is-fullwidth" href="https://tinyurl.com/cdcunc-volunteer">
                             Help Volunteer
                         </a>
                     </div>
@@ -126,7 +126,7 @@
         </div>
     </section>
 
-    <section class="hero is-dark is-fullheight">
+    <section class="hero is-dark">
         <div class="hero-body">
             <div class="container">
                 <h1>
@@ -262,6 +262,7 @@
             </div>
         </div>
     </section>
+
     <section class="section sponsors" id="sponsors">
         <div class="container">
             <div class="columns is-centered">
