Navbar sits at top instead of being fixed

--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+<head></head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Carolina Data Challenge</title>
 
     <!--CSS-->
-
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./bulma-0.7.5/css/bulma.css">
     <link rel="stylesheet" href="./css/mystyles.css">
@@ -20,7 +19,7 @@
 
 <body>
     <section class="hero is-info is-fullheight">
-        <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
+        <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <a class="navbar-item" href="https://carolinadata.unc.edu/">
                     <h1>CADS</h1>
@@ -92,12 +91,14 @@
                 <div class="columns has-text-centered">
                     <div class="column is-one-fifth"></div>
                     <div class="column">
-                        <a class="button is-warning is-focused is-fullwidth" href="https://carolinadatachallenge.typeform.com/to/vmVR4a">
+                        <a class="button is-warning is-focused is-fullwidth"
+                            href="https://carolinadatachallenge.typeform.com/to/vmVR4a">
                             Register
                         </a>
                     </div>
                     <div class="column">
-                        <a class="button is-warning is-focused is-fullwidth" href="https://tinyurl.com/cdcunc-volunteer">
+                        <a class="button is-warning is-focused is-fullwidth"
+                            href="https://tinyurl.com/cdcunc-volunteer">
                             Help Volunteer
                         </a>
                     </div>
