--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
 <body>
     <section class="hero is-info is-fullheight">
-        <nav class="navbar" role="navigation" aria-label="main navigation">
+        <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <a class="navbar-item" href="https://carolinadata.unc.edu/">
-                    <h1>CADS</h1>
+                    <h1 style="color:#FFFFFF">CADS</h1>
                 </a>
             </div>
 
@@ -168,101 +168,7 @@
         </div>
     </section>
 
-    <section class="hero">
-        <div class="hero-body has-text-centered">
-            <div class="columns is-centered">
-                <div class="column is-half">
-                    <div class="container has-text-centered">
-                        <h1>
-                            <b>
-                                2018 Winners
-                            </b>
-                        </h1>
-                    </div>
-                    <div class="table-container">
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th scope="col">Place</th>
-                                    <th scope="col">Team Name</th>
-                                    <th scope="col">Team Members</th>
-                                    <th scope="col">Project Links</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <th scope="row">1st - Best Insight</th>
-                                    <td>Big Baller Analytics</td>
-                                    <td>Vibhu Ambil<br>George Dimitrov<br>Sahil Patel<br>Tyler Youngberg</td>
-                                    <td><a target="_blank"
-                                            href="https://drive.google.com/file/d/1bYTzrMsozqJAHe1yr57YxfX9G6UvNu64/view?usp=sharing">Write
-                                            up</a><br>
-                                        <a target="_blank"
-                                            href="https://docs.google.com/presentation/d/1GtqWYuhvl69iIknB6HxDVG8GZOs9Ugstb1UE-l7zp08/edit?usp=sharing">Project
-                                            Site</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">2nd - Best Insight</th>
-                                    <td>Analytics Anonymous</td>
-                                    <td>Micheal Bono<br>James Bury<br>Evan Vitkus</td>
-                                    <td><a target="_blank"
-                                            href="https://drive.google.com/file/d/1CG02Fd0VmA0XwB_I8UGgDNr4KeKy0mJ6/view?usp=sharing">Write
-                                            up</a><br>
-                                        <a target="_blank" href="https://data.world/jamesb3/data-challenge">Project
-                                            Site</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">1st - Visualization</th>
-                                    <td>int elligent = us;</td>
-                                    <td>Surya Poddutoori<br>Jonah Soberano<br>Rahul Narvekar</td>
-                                    <td><a target="_blank"
-                                            href="https://drive.google.com/file/d/16s3HtKzNHpzc5kvbU59rXZroPq_j63W5/view?usp=sharing">Write
-                                            up</a><br>
-                                        <a target="_blank" href="https://rahul200023.wixsite.com/mysite">Project
-                                            Site</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">2nd - Visualization</th>
-                                    <td>Team Sam</td>
-                                    <td>Marc Rovner<br>Joshua Jiang<br>Bill Hansen<br>Ted Henson</td>
-                                    <td><a target="_blank"
-                                            href="https://drive.google.com/file/d/1PTFpB1DjRQ3T07FV55ZJQ5w7J9XQRKYM/view?usp=sharing">Write
-                                            up</a><br>
-                                        <a target="_blank"
-                                            href="https://drive.google.com/file/d/1oQcDgLltMQJAQ1QiL7IyFzSNzVWYJsTo/view?usp=sharing">Project
-                                            Site</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">1st - Outside Data</th>
-                                    <td>No Javial? No Problem</td>
-                                    <td>Jacob McCright<br>George Lidner</td>
-                                    <td><a target="_blank"
-                                            href="https://drive.google.com/file/d/1doYZjHj9nLMhW5p7Tq4Ud8kfNBqzl1oW/view?usp=sharing">Write
-                                            up</a><br>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">2nd - Outside Data</th>
-                                    <td>MFE</td>
-                                    <td>Ruochen Li<br>Luokexin Mo<br>Songhe Wang<br>Hanqi Zhang</td>
-                                    <td><a target="_blank"
-                                            href="https://drive.google.com/file/d/1NaNtmYN_1jjv79ScdjIcD_IuMnnq4NCf/view?usp=sharing">Write
-                                            up</a><br>
-                                        <a target="_blank" href="http://data.world/liruochen1998/nba-position/">Project
-                                            Site</a>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    
 
     <section class="section sponsors" id="sponsors">
         <div class="container">
