Fixed icons, spacing, and nav

--- a/index.html
+++ b/index.html
@@ -7,22 +7,21 @@
     <title>Carolina Data Challenge</title>
 
     <!--CSS-->
-
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./bulma-0.7.5/css/bulma.css">
     <link rel="stylesheet" href="./css/mystyles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
-
+    
 
 </head>
 
 <body>
     <section class="hero is-info is-fullheight">
-        <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
+        <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-                <a class="navbar-item" href="https://carolinadata.unc.edu/">
+                <a class="navbar-item" href="https://carolinadata.unc.edu/" id="CADS">
                     <h1>CADS</h1>
                 </a>
             </div>
@@ -48,7 +47,7 @@
                     <span class="navbar-item">
                         <a class="button is-white is-outlined" href="#sponsors">
                             <span class="icon">
-                                <i class="fa fa-money-bill"></i>
+                                <i class="fa fa-link"></i>
                             </span>
                             <span>Sponsors</span>
                         </a>
@@ -65,7 +64,7 @@
                         <a class="button is-warning is-white"
                             href="https://carolinadatachallenge.typeform.com/to/vmVR4a">
                             <span class="icon">
-                                <i class="fa fa-address-book"></i>
+                                <i class="fa fa-sign-in-alt"></i>
                             </span>
                             <span>Register</span>
                         </a>
@@ -74,8 +73,6 @@
             </div>
             </div>
         </nav>
-
-
 
         <!-- particles.js container -->
         <div id="particles-js"></div>
@@ -102,6 +99,9 @@
                         </a>
                     </div>
                     <div class="column is-one-fifth"></div>
+                </div>
+                <div>
+                    <br>
                 </div>
             </div>
         </div>
