--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html>
 
 <head></head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Carolina Data Challenge</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Carolina Data Challenge</title>
+<link rel="icon" href="img/logo.png">
 
-    <!--CSS-->
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./bulma-0.7.5/css/bulma.css">
-    <link rel="stylesheet" href="./css/mystyles.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+<!--CSS-->
+<link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="./bulma-0.7.5/css/bulma.css">
+<link rel="stylesheet" href="./css/mystyles.css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 
 
 </head>
