Removed registration and added closed message

--- a/index.html
+++ b/index.html
@@ -24,61 +24,52 @@
         <div id="particles-js"></div>
         <script src='https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js'></script>
         <script src="./scripts/particles.js"></script>
-        
+
         <nav class="navbar" role="navigation" aria-label="main navigation">
-                <div class="navbar-brand">
-                    <a class="navbar-item" href="https://carolinadata.unc.edu/" id="CADS">
-                        <h1>CADS</h1>
-                    </a>
+            <div class="navbar-brand">
+                <a class="navbar-item" href="https://carolinadata.unc.edu/" id="CADS">
+                    <h1>CADS</h1>
+                </a>
+            </div>
+
+            <div id="navbarMenu" class="navbar-menu">
+                <div class="navbar-end">
+                    <span class="navbar-item">
+                        <a class="button is-white is-outlined" href="#home">
+                            <span class="icon">
+                                <i class="fa fa-home"></i>
+                            </span>
+                            <span>Home</span>
+                        </a>
+                    </span>
+                    <span class="navbar-item">
+                        <a class="button is-white is-outlined" href="#info">
+                            <span class="icon">
+                                <i class="fa fa-book"></i>
+                            </span>
+                            <span>Info</span>
+                        </a>
+                    </span>
+                    <span class="navbar-item">
+                        <a class="button is-white is-outlined" href="#sponsors">
+                            <span class="icon">
+                                <i class="fa fa-link"></i>
+                            </span>
+                            <span>Sponsors</span>
+                        </a>
+                    </span>
+                    <span class="navbar-item">
+                        <a class="button is-white is-outlined" href="#contact">
+                            <span class="icon">
+                                <i class="fa fa-address-book"></i>
+                            </span>
+                            <span>Contact</span>
+                        </a>
+                    </span>
                 </div>
-    
-                <div id="navbarMenu" class="navbar-menu">
-                    <div class="navbar-end">
-                        <span class="navbar-item">
-                            <a class="button is-white is-outlined" href="#home">
-                                <span class="icon">
-                                    <i class="fa fa-home"></i>
-                                </span>
-                                <span>Home</span>
-                            </a>
-                        </span>
-                        <span class="navbar-item">
-                            <a class="button is-white is-outlined" href="#info">
-                                <span class="icon">
-                                    <i class="fa fa-book"></i>
-                                </span>
-                                <span>Info</span>
-                            </a>
-                        </span>
-                        <span class="navbar-item">
-                            <a class="button is-white is-outlined" href="#sponsors">
-                                <span class="icon">
-                                    <i class="fa fa-link"></i>
-                                </span>
-                                <span>Sponsors</span>
-                            </a>
-                        </span>
-                        <span class="navbar-item">
-                            <a class="button is-white is-outlined" href="#contact">
-                                <span class="icon">
-                                    <i class="fa fa-address-book"></i>
-                                </span>
-                                <span>Contact</span>
-                            </a>
-                        </span>
-                        <span class="navbar-item">
-                            <a class="button is-warning is-white"
-                                href="https://carolinadatachallenge.typeform.com/to/vmVR4a">
-                                <span class="icon">
-                                    <i class="fa fa-sign-in-alt"></i>
-                                </span>
-                                <span>Register</span>
-                            </a>
-                        </span>
-                    </div>
-                </div>
-                </div>
-            </nav>
+            </div>
+            </div>
+        </nav>
 
         <!--Landing body-->
         <div class="hero-body" id="home">
@@ -86,23 +77,16 @@
                 <img src="./img/CDC-logo.png" width="70%">
                 <h4 style="color:#545E60">Powered by</h4>
                 <img src="./img/captech_topcrop.png" width="25%">
+            </div>
+        </div>
+    </section>
 
-                <div class="columns has-text-centered">
-                    <div class="column is-one-fifth"></div>
-                    <div class="column">
-                        <a class="button is-warning is-focused is-fullwidth"
-                            href="https://carolinadatachallenge.typeform.com/to/vmVR4a">
-                            Register
-                        </a>
-                    </div>
-                    <div class="column">
-                        <a class="button is-warning is-focused is-fullwidth"
-                            href="https://tinyurl.com/cdcunc-volunteer">
-                            Help Volunteer
-                        </a>
-                    </div>
-                    <div class="column is-one-fifth"></div>
-                </div>
+    <section class="hero is-medium is-danger is-bold" id="info">
+        <div class="hero-body">
+            <div class="container has-text-centered">
+                <h1>
+                    Registration for the 2019 Carolina Data Challenge is now <b>closed</b>.
+                </h1>
             </div>
         </div>
     </section>
