Bug fixes and typos

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <script src='https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js'></script>
         <script src="./scripts/particles.js"></script>
         
-        <nav class="navbar" role="navigation" aria-label="main navigation">
+        <nav class="navbar" id="navbar" role="navigation" aria-label="main navigation">
                 <div class="navbar-brand">
                     <a class="navbar-item" href="https://carolinadata.unc.edu/" id="CADS">
                         <h1>CADS</h1>
@@ -68,7 +68,7 @@
                         </span>
                         <span class="navbar-item">
                             <a class="button is-warning is-white"
-                                href="https://carolinadatachallenge.typeform.com/to/vmVR4a">
+                                href="https://carolinadatachallenge.typeform.com/to/BDayXB">
                                 <span class="icon">
                                     <i class="fa fa-sign-in-alt"></i>
                                 </span>
@@ -91,7 +91,7 @@
                     <div class="column is-one-fifth"></div>
                     <div class="column">
                         <a class="button is-warning is-focused is-fullwidth"
-                            href="https://carolinadatachallenge.typeform.com/to/vmVR4a">
+                            href="https://carolinadatachallenge.typeform.com/to/BDayXB">
                             Register
                         </a>
                     </div>
@@ -112,7 +112,7 @@
             <div class="container">
                 <h1>When:
                     <b>
-                        October 5th, 8am - October 6th, 12pm, 2019
+                        October 5th, 8am - October 6th, 4pm, 2019
                     </b>
                 </h1>
                 <h1>Where:
@@ -150,7 +150,7 @@
                 </p>
                 <p class="is-size-4">
                     The event is completely free and meals are included! However, transportation is not available to the
-                    event this year, so participants must make their own travel arrangements"
+                    event this year, so participants must make their own travel arrangements. However, we are offering travel reimbursements.
                 </p>
 
                 <h1>
@@ -255,8 +255,8 @@
                         </b>
                     </h4>
                     <p>
-                        <a href="mailto:rnarveka@live.unc.edu">
-                            rnarveka@live.unc.edu
+                        <a href="mailto:shara803@live.unc.edu">
+                            shara803@live.unc.edu
                         </a>
                     </p>
                 </div>
