--- a/index.html
+++ b/index.html
@@ -24,61 +24,61 @@
         <div id="particles-js"></div>
         <script src='https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js'></script>
         <script src="./scripts/particles.js"></script>
-        
+
         <nav class="navbar" id="navbar" role="navigation" aria-label="main navigation">
-                <div class="navbar-brand">
-                    <a class="navbar-item" href="https://carolinadata.unc.edu/" id="CADS">
-                        <h1>CADS</h1>
-                    </a>
+            <div class="navbar-brand">
+                <a class="navbar-item" href="https://carolinadata.unc.edu/" id="CADS">
+                    <h1>CADS</h1>
+                </a>
+            </div>
+
+            <div id="navbarMenu" class="navbar-menu">
+                <div class="navbar-end">
+                    <span class="navbar-item">
+                        <a class="button is-white is-outlined" href="#home">
+                            <span class="icon">
+                                <i class="fa fa-home"></i>
+                            </span>
+                            <span>Home</span>
+                        </a>
+                    </span>
+                    <span class="navbar-item">
+                        <a class="button is-white is-outlined" href="#info">
+                            <span class="icon">
+                                <i class="fa fa-book"></i>
+                            </span>
+                            <span>Info</span>
+                        </a>
+                    </span>
+                    <span class="navbar-item">
+                        <a class="button is-white is-outlined" href="#sponsors">
+                            <span class="icon">
+                                <i class="fa fa-link"></i>
+                            </span>
+                            <span>Sponsors</span>
+                        </a>
+                    </span>
+                    <span class="navbar-item">
+                        <a class="button is-white is-outlined" href="#contact">
+                            <span class="icon">
+                                <i class="fa fa-address-book"></i>
+                            </span>
+                            <span>Contact</span>
+                        </a>
+                    </span>
+                    <span class="navbar-item">
+                        <a class="button is-warning is-white"
+                            href="https://carolinadatachallenge.typeform.com/to/BDayXB">
+                            <span class="icon">
+                                <i class="fa fa-sign-in-alt"></i>
+                            </span>
+                            <span>Register</span>
+                        </a>
+                    </span>
                 </div>
-    
-                <div id="navbarMenu" class="navbar-menu">
-                    <div class="navbar-end">
-                        <span class="navbar-item">
-                            <a class="button is-white is-outlined" href="#home">
-                                <span class="icon">
-                                    <i class="fa fa-home"></i>
-                                </span>
-                                <span>Home</span>
-                            </a>
-                        </span>
-                        <span class="navbar-item">
-                            <a class="button is-white is-outlined" href="#info">
-                                <span class="icon">
-                                    <i class="fa fa-book"></i>
-                                </span>
-                                <span>Info</span>
-                            </a>
-                        </span>
-                        <span class="navbar-item">
-                            <a class="button is-white is-outlined" href="#sponsors">
-                                <span class="icon">
-                                    <i class="fa fa-link"></i>
-                                </span>
-                                <span>Sponsors</span>
-                            </a>
-                        </span>
-                        <span class="navbar-item">
-                            <a class="button is-white is-outlined" href="#contact">
-                                <span class="icon">
-                                    <i class="fa fa-address-book"></i>
-                                </span>
-                                <span>Contact</span>
-                            </a>
-                        </span>
-                        <span class="navbar-item">
-                            <a class="button is-warning is-white"
-                                href="https://carolinadatachallenge.typeform.com/to/BDayXB">
-                                <span class="icon">
-                                    <i class="fa fa-sign-in-alt"></i>
-                                </span>
-                                <span>Register</span>
-                            </a>
-                        </span>
-                    </div>
-                </div>
-                </div>
-            </nav>
+            </div>
+            </div>
+        </nav>
 
         <!--Landing body-->
         <div class="hero-body" id="home">
@@ -150,7 +150,8 @@
                 </p>
                 <p class="is-size-4">
                     The event is completely free and meals are included! However, transportation is not available to the
-                    event this year, so participants must make their own travel arrangements. However, we are offering travel reimbursements.
+                    event this year, so participants must make their own travel arrangements. However, we are offering
+                    travel reimbursements.
                 </p>
 
                 <h1>
@@ -166,8 +167,6 @@
             </div>
         </div>
     </section>
-
-
 
     <section class="section sponsors" id="sponsors">
         <div class="container">
